--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url("styles/header.css");
 
 :root {
-    --cor-de-fundo:#EBECEE;
-    --branco: #FFFFFF;
+    --cor-de-fundo:#d7e2e0f8;
+    --branco: #e91010;
 }
 
 body{
