--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 
 :root {
     --cor-de-fundo:#d7e2e0f8;
-    --branco: #e91010;
+    --branco: #FFFFFF ;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
 }
 
 body{
