--- a/#style.css
+++ b/#style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=chakra+petch:wght@400;700');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:w ght@400:700&display=Swap');
 
 :root{
-    --cor-de-fundo: #1E1E1E;
+    --cor-de-fundo: #161618;
     --verde: #6FFF57;
     --branco: #FFFFFF;
     --botao-ativo: #3A375E;
@@ -36,6 +36,7 @@ body{
     color: var(--verde);
 }
 
+
 .botao{
     font-family: "Crakra Petch", sans-serif;
     background-color: var(--botao-inativo);
@@ -47,18 +48,35 @@ body{
     align-items: center;
     width: 100%;
     border-bottom: 4px solid var(--botao-ativo);
-    border-left: 4px solid var(--botao-ativo);
-    border-right: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
 
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
 
 .botoes{
     display: block;
 }
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+}
+
 @media screen and (min-width: 768px){
     .botoes{
         display: flex;
+    }
+
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
+
+    .botao:last-child{
+        border-radius:0 40px 0 0;
     }
 
 }
