--- a/style.css
+++ b/style.css
@@ -1,17 +1,53 @@
-@import url("styles/header.css");
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Mono&display=swap');
 
-:root {
-    --cor-de-fundo:#d7e2e0f8;
-    --branco: #FFFFFF ;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --fonte-principal: "poppins"
+:root{
+    --branco: white;
+    --cor-de-fundo:  #00162E;
+    --fundo-senha: #00244D;
+    --fundo-texto: #001E40;
+    --borda: #0075FF;
+    --roboto: 'Roboto', 'sans-serif';
+    --roboto-mono: 'Roboto Mono', monospace;
 }   
 
-body{
-    background-color: var(--cor-de-fundo);
-    font-family: var(--fonte-principal);
-    font-size: 16px;
+*{
     font-weight: 400;
 }
 
+body{
+    color: var(--branco);
+    background-color:  var(--cor-de-fundo);
+    font-family: var(--roboto);
+}
+
+.titulo-principal{
+    font-family: var(--roboto-mono);
+    font-size: 32px;
+}
+
+.titulo-secundario{
+    font-size: 24px;
+}
+
+.conteudo-titulo{
+    text-align: center;
+    margin-top: 80px;
+}
+
+.conteudo-senha{
+    background: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
+}
+
+#campo-senha{
+    background-color: var(--fundo-senha);
+    border: none;
+    color: var(--branco);
+    font-family: var(--roboto-mono);
+    font-size: 40px;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
